[package]
name = "reda-unit"
version = "0.3.0"
edition = "2024"
description = "physical units"
repository = "https://github.com/MoleSir/reda-unit.git"
license = "MIT"


[dependencies]
serde = "1.0.219"
serde_json = "1.0.141"
paste = "1.0"
reda-unit-macros = { path = "./macros", package = "reda-unit-macros", version = "0.3.0" }