[package]
name = "reda-unit-macros"
version = "0.3.1"
edition = "2024"
description = "physical units macros"
repository = "https://github.com/MoleSir/reda-unit.git"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
convert_case = { workspace = true }
proc-macro-crate = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
regex = { workspace = true }
syn = { workspace = true, features = ["full"] }