[package]
name = "reda-unit-macros"
version = "0.3.0"
edition = "2024"
description = "physical units macros"
repository = "https://github.com/MoleSir/reda-unit.git"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.8.0"
proc-macro-crate = "3.3.0"
proc-macro2 = "1.0.95"
quote = "1.0.40"
regex = "1.11.1"
syn = { version = "2.0.100", features = ["full"] }